--- a/CarWechat/templates/car/repay.html
+++ b/CarWechat/templates/car/repay.html
@@ -62,16 +62,24 @@
                 <div class="weui-wepay-detail__ft">-￥{{ data.cutfee/100 }}</div>
             </div>
             <div class="weui-wepay-detail">
+                <div class="weui-wepay-detail__bd">保险：</div>
+                {% if data.Insure %}
+                    <div class="weui-wepay-detail__ft">{{ data.Insure.name }}:￥{{ data.insurefee/100 }}</div>
+                {% else %}
+                    <div class="weui-wepay-detail__ft">无</div>
+                {% endif %}
+            </div>
+            <div class="weui-wepay-detail">
                 <div class="weui-wepay-detail__bd">总价：</div>
                 <div class="weui-wepay-detail__ft weui-wepay-color-green">￥{{ data.totalfee/100 }}</div>
             </div>
 
         </div>
 
-            <div class="weui-wepay-details__ft">
-                <a href="javascript:;" class="weui-btn weui-btn_primary" id="pay">付款</a>
-                <a href="javascript:;" class="weui-btn weui-btn_warn" id="cancel">取消订单</a>
-            </div>
+        <div class="weui-wepay-details__ft">
+            <a href="javascript:;" class="weui-btn weui-btn_primary" id="pay">付款</a>
+            <a href="javascript:;" class="weui-btn weui-btn_warn" id="cancel">取消订单</a>
+        </div>
 
     </div>
 
