--- a/CarWechat/app/templates/car/cart.html
+++ b/CarWechat/app/templates/car/cart.html
@@ -200,6 +200,8 @@
                 processData: false,
                 async: false,
                 success: function (data) {
+                    alert(data['status'])
+                    alert(data['result'])
                     if (data['status'] === 'ok') {
                         result = data['result'];
                         wx.chooseWXPay({
