--- a/CarWechat/app/templates/car/inform.html
+++ b/CarWechat/app/templates/car/inform.html
@@ -1,18 +1,126 @@
 {% extends "base.html" %}
 {% block css %}
-<style type="text/css">
+    <style type="text/css">
 
-</style>
+    </style>
 {% endblock %}
 {% block content %}
-<div class="container">
-    <div>
-        <h6 class="greyWords">{{ data.msg }}</h6>
-    </div>
-</div>
-{% endblock %}error.html
-{% block script %}
-<script>
+    <div class="container">
+        <h1>一.车辆租赁费用</h1>
+        <ol>
+            <li>
+                1.如拖欠租金每天按车辆总价值的0.3%交付滞纳金。本车辆在辽宁省内行驶不限制公里数，出省按300公里/天计算。如省外行驶超出300公里，超出部分按1-2元/公里收取。
+            </li>
+            <li>
+                2.如拆卸GPS定位系统、转借他人、拖欠租金、抵押、变卖、典当、转让、转租、出售、质押、拆解、实验、测试、三日内联系不到客户等事项一旦发生，甲方有权立即终止合同，将车辆无条件收回，并有权要求乙方赔偿由此产生的一切损失。
+            </li>
+        </ol>
+        <h1>二.甲方的权利义务</h1>
+        <ol>
+            <li>
+                1.甲方为乙方提供证照齐全有效，技术状况良好的车辆。甲方负责向保险公司对租
+                赁车辆投保交强险、车损、不计免陪、盗抢和第三者责任险。
+            </li>
+            <li>
+                2.乙方违约，甲方有权收回租赁车辆，并扣除租车租金。甲方负责对所租车辆进行
+                日常维护保养。乙方退租时，如车辆设备发生损毁，应由乙方负责恢复原状或赔偿损失，车辆修复期间乙方应继续向甲方支付租金。因甲方所派司机驾驶不当造成损坏的由甲方自负。
+            </li>
+            <li>
+                3.租车期间如有车辆交通事故、被盗抢时，应立即向公安、交管等部门报案并在12
+                小时内通知甲方，甲方协助乙方处理发生的交通事故和协调保险公司及时按规定办理索赔手续。
+            </li>
+            <li>
+                4.甲方有按时收取租金的权利，乙方必须按合同规定的时间和金额付款。否则，每
+                逾期一天，赔偿一天的租金，并按第一条标准支付滞纳金。如乙方持续拖延支付租金，甲方有继续向乙方索赔及自行将车收回的权利，因收车造成的任何损失，甲方概不负责。
+            </li>
+            <li>
+                5.因乙方的过错给甲方造成损失的，甲方可以要求乙方赔偿因此产生的一切损失。
+            </li>
+        </ol>
+        <h1>三.乙方的权利义务</h1>
+        <ol>
+            <li>
+                1.乙方提供给甲方的资料应保证真实有效（如身份证、学生证、驾驶证等）否则就
+                此产生的责任均由乙方负责。
+            </li>
+            <li>
+                2.乙方认真检查并掌握租赁车辆的各种性能和操作方法，点清车辆附件，验收签字
+                后驶离。凡因乙方操作不当，造成车辆机械故障方面的缺陷引起的损失（包括行驶过程中轮胎损坏），由乙方自行承担保。由于乙方保管不善造成车辆遗失或造成车辆附件损坏，乙方应向甲方承担赔偿责任。
+            </li>
+            <li>
+                3.乙方租用的甲方车辆不能从事其它营业性客货运输、不能转租、转包、抵押、投
+                资、赠予，不能赋予自己对车辆任何超出本合同规定的其它权利，未经甲方允许 ，不得擅自修理车辆，不能私自拆装、更换、甲方的车体（件）。否则甲方有权收回车辆，并要求乙方赔偿因此所造成的一切经济损失。
+            </li>
+            <li>
+                4.乙方利用租赁车辆从事非法活动、转租所导致的后果，均由乙方负责，同时甲方有权解除合同。
+            </li>
+            <li>
+                5.乙方要求延长汽车租赁合同，必须提前到甲方公司办理延期手续。在不欠租金且公司车辆还没租出去之前可以续租.
+            </li>
+            <li>
+                6.车辆发生事故，乙方应保护现场，立即通知甲方及有关部门，车辆修理由甲方安
+                排修理地点，乙方不得擅自安排修理，一旦车辆损坏，禁止继续使用，乙方应全力配合交通管理部门处理好车辆事故，发生交通事故造成人员伤亡时，乙方自行承担保险赔偿以外的全部责任（所有损失），按照交通管理条例处理。
+            </li>
+            <li>
+                7.车辆发生事故，修理费由乙方预先支付，在停驶或修理期间的租费由乙方承担，若发现乙方发生事故不报告，擅自修理将按正规修理费的3倍罚款。
+            </li>
+            <li>
+                8.乙方在承租期间，若遗失牌照或有关证件，乙方应向有关部门申请补办，补办期间的车辆租赁费及补办手续费，由乙方承担，直至车辆能正常行驶时为止。
+            </li>
+            <li>
+                9.乙方在用车期满，应完好无缺损将车辆交给甲方。不得卸下里程表和故意损坏里程表，如有发生按每日1000元收费，不得更换车辆零部件。
+            </li>
+            <li>
+                10.严禁酒后开车，严禁使用车辆进行违法活动、当教练车、参加竞赛及作测试使用，严禁装载易燃、易爆易腐浊物品。
+            </li>
+            <li>
+                11.按照中国人民保险公司的条款规定，车辆发生意外时保险公司实行限额赔偿，乙方须承担保险限额以外的所有费用。
+            </li>
+            <li>
+                12.全车丢失后至保险公司赔偿前，该期间的租赁费由乙方承担。
+            </li>
+            <li>
+                13.赔偿时，乙方应向保险公司提交保险单，事故证明，事故调解结案书，损失清单和各种有费用的单据，如实填写机动车辆出险报告单。
+            </li>
+            <li>
+                14.乙方在车辆租用期间，汽油、润滑油、路桥费、停车费自行负责。
+            </li>
+            <li>
+                15.租赁车辆只能用于租赁期间租赁人自己驾驶，不许私自转借、转租、抵押、典当、拆卸车辆配件，如上类事情发生，甲方可以押金全额不退还乙方，甲方可以根据乙方造成的损失到约定的派出所报案，法院起诉等维权行为。
+            </li>
+            <li>
+                16.乙方在车辆租赁过程中，因不可归责于自己的事由受到人身或财产损失的，应向侵权责任人要求赔偿损失，与甲方无关。
+            </li>
+            <li>
+                17.因乙方的过错给第三人造成人身或财产损失的，乙方应对自身行为给第三人造成的损失承担赔偿责任，与甲方无关。如因乙方自己过错行为造成自身人身和财产损失的，应独自承担损失，与甲方无关。
+            </li>
 
-</script>
+        </ol>
+        <h1>四.其它事项</h1>
+        <ol>
+            <li>
+                1.以上有约定的按约定处理，其它有违约行为的，违约一方负有赔偿对方损失的责任。
+            </li>
+            <li>
+                2.本合同的纠纷诉讼归合同签订地沈阳市铁西区人民法院管辖。其他未尽事项，由双方协商，另订附件。
+            </li>
+            <li>
+                3.乙方对汽车租赁期间的交通违章及交警电子眼抓拍全权负责。乙方应在违章告知日后七天内处理违章罚款，逾期未处理则由甲方代为办理，甲方收取代办费100元/台，车辆有扣分的额外收取100元/分。甲方在垫款后经索要不给的，保留向乙方学校发律师函以及到法院起诉索赔的权利。
+            </li>
+            <li>
+                4.乙方可以在甲方处购买车辆保险：（1）保险费每天20元，乙方如出现交通事故，车辆损失1000元以内划痕损失（不包括钣金等）免予向甲方赔偿；1000元以外部分按损失的30%赔偿车辆折旧损失。（2）保险费每天40元，乙方如出现交通事故，车辆损失1500元以内免予向甲方赔偿；1500以外部分按损失30%赔偿车辆折旧损失。
+                上述保险赔偿项目不包括乙方因事故造成的人身伤亡。
+            </li>
+            <li>
+                5.如乙方在甲方处不购买任何保险，如出现任何事故，乙方在甲方将车辆维修恢复原状后，均应用车辆维修价款的30%额外向甲方赔偿车辆加速折旧费用。
+            </li>
+        </ol>
+
+
+    </div>
+{% endblock %}
+{% block script %}
+    <script>
+
+    </script>
 {% endblock %}
