--- a/CarWechat/app/templates/car/cart.html
+++ b/CarWechat/app/templates/car/cart.html
@@ -91,7 +91,7 @@
                     <label class="weui-cell weui-check__label" for="x{{ loop.index }}">
 
                         <div class="weui-cell__bd">
-                            <a href="#">{{ ins.name }} ￥{{ ins.price/100 }}/天</a>
+                            <a href="javascript:weui.alert('{{ ins.detail }}');" >{{ ins.name }} ￥{{ ins.price/100 }}/天</a>
                         </div>
                         <div class="weui-cell__ft">
                             <input type="radio" name="radio1" class="weui-check" id="x{{ loop.index }}"
@@ -119,7 +119,7 @@
         <label for="weuiAgree" class="weui-agree">
             <input id="weuiAgree" type="checkbox" class="weui-agree__checkbox">
             <span class="weui-agree__text">
-        阅读并同意<a href="javascript:void(0);">《相关条款》</a>
+        阅读并同意<a href="{{ url_for("web.wxContract") }}">《相关条款》</a>
     </span>
         </label>
         <div class="weui-wepay-details__ft">
