--- a/CarWechat/app/templates/car/sign.html
+++ b/CarWechat/app/templates/car/sign.html
@@ -51,7 +51,7 @@
             </div>
         </div>
 
-        <div class="weui-cell weui-cell_vcode">
+        <div class="weui-cell">
             <div class="weui-cell__hd"><label class="weui-label" id="vCodeLable1">验证码</label></div>
             <div class="weui-cell__bd">
                 <input class="weui-input" type="number" id="vCode" placeholder="请输入验证码"/>
