--- a/CarWechat/app/templates/car/orderDetail.html
+++ b/CarWechat/app/templates/car/orderDetail.html
@@ -111,7 +111,7 @@
             navSelect($('#nav-order'));
 
             $('#refund').click(function () {
-                alert("暂不能申请退款，请联系客服");
+                alert("暂不能申请退款，请联系客服 4006662456");
                 {#                refund();#}
             });
         });
