--- a/CarWechat/app/templates/car/order.html
+++ b/CarWechat/app/templates/car/order.html
@@ -14,7 +14,7 @@
     <div class="weui-wepay-lists">
         <div class="weui-wepay-lists__bd">
             <div class="weui-cells">
-                {% if datal|count==0 %}
+                {% if data|count==0 %}
                     <p style="color: gray;text-align: center">对不起，您还没有订单<a href="{{ url_for('web.selectCar') }}" style="text-align: center"> 去订车</a></p>
 
                 {% endif %}
