--- a/CarWechat/app/templates/car/cart.html
+++ b/CarWechat/app/templates/car/cart.html
@@ -89,7 +89,7 @@
                         <span class="weui-icon-checked"></span>
                     </div>
                 </label>
-                {% for ins in insure %}
+                {% for ins in carData.insures %}
                     <label class="weui-cell weui-check__label" for="x{{ loop.index }}">
 
                         <div class="weui-cell__bd">
