--- a/CarAdmin/app/templates/admin/base.html
+++ b/CarAdmin/app/templates/admin/base.html
@@ -75,7 +75,7 @@
     <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js" type="text/javascript"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="https://cdn.bootcss.com/moment.js/2.22.1/moment.min.js" type="text/javascript"></script>
-    <script src="https://cdn.bootcss.com/select2/4.0.6-rc.1/css/select2.min.css" type="text/javascript"></script>
+    <script src="https://cdn.bootcss.com/select2/3.5.2/select2.min.js" type="text/javascript"></script>
     {% endblock %}
 
     {% block tail %}
