--- a/CarWechat/app/templates/agent/carback.html
+++ b/CarWechat/app/templates/agent/carback.html
@@ -33,6 +33,10 @@
                 <div class="weui-wepay-detail__ft">{{ data.Customer.phone }}</div>
             </div>
             <div class="weui-wepay-detail">
+                <div class="weui-wepay-detail__bd">服务点：</div>
+                <div class="weui-wepay-detail__ft">{{ data.Serverstop.name }}</div>
+            </div>
+            <div class="weui-wepay-detail">
                 <div class="weui-wepay-detail__bd">时间：</div>
                 <div class="weui-wepay-detail__ft">{{ data.created_at }}</div>
             </div>
