--- a/CarWechat/app/templates/agent/order.html
+++ b/CarWechat/app/templates/agent/order.html
@@ -30,6 +30,7 @@
                             </div>
                             <div class="weui-cell__info">
                                 {{ d.created_at }}<br>
+                                {{ d.Serverstop.name }}<br>
                                 {{ d.Customer.name }}/{{ d.Customer.phone }}/{{ d.Insure.name }}
 
                             </div>
