--- a/CarWechat/app/templates/agent/depart.html
+++ b/CarWechat/app/templates/agent/depart.html
@@ -33,6 +33,10 @@
                 <div class="weui-wepay-detail__ft">{{ data.Customer.phone }}</div>
             </div>
             <div class="weui-wepay-detail">
+                <div class="weui-wepay-detail__bd">服务点：</div>
+                <div class="weui-wepay-detail__ft">{{ data.Serverstop.name }}</div>
+            </div>
+            <div class="weui-wepay-detail">
                 <div class="weui-wepay-detail__bd">时间：</div>
                 <div class="weui-wepay-detail__ft">{{ data.created_at }}</div>
             </div>
@@ -233,8 +237,8 @@
                 // return true; // 阻止默认行为，不使用默认的失败态
             }
         });
-        var carid="";
-        var outprovince="";
+        var carid = "";
+        var outprovince = "";
         $(function () {
             var $sliderTrack = $('.weui-slider__track'),
                 $sliderHandler = $('.weui-slider__handler'),
@@ -268,10 +272,10 @@
             weui.picker([
 
                 {% for c in car %}
-                {
-                    label: {{ c.name }},
-                    value: {{ c.id }}
-                },
+                    {
+                        label: {{ c.name }},
+                        value: {{ c.id }}
+                    },
                 {% endfor %}
             ], {
                 onChange: function (result) {
@@ -338,12 +342,12 @@
                         }
                         if (result['status'] == 'error') {
                             alert('权限错误');
-{#                            window.location = "{{url_for('web.selectCar')}}"#}
+                            {#                            window.location = "{{url_for('web.selectCar')}}"#}
                         }
-{#                        if (result['status'] == 'alert') {#}
-{#                            alert(result['msg']);#}
-{##}
-{#                        }#}
+                        {#                        if (result['status'] == 'alert') {#}
+                        {#                            alert(result['msg']);#}
+                        {##}
+                        {#                        }#}
                     }
 
                 })
