--- a/CarWechat/app/templates/agent/depart.html
+++ b/CarWechat/app/templates/agent/depart.html
@@ -97,7 +97,7 @@
 
         <div class="weui-cell">
 
-            <div class="weui-cell__hd"><label for="" class="weui-label">收车时间</label></div>
+            <div class="weui-cell__hd"><label for="" class="weui-label">发车时间</label></div>
             <div class="weui-cell__bd">
                 <input class="weui-input" type="datetime-local" value="" placeholder="" id="depart_time">
             </div>
@@ -269,6 +269,7 @@
             ;
         });
         $('#carCode').on('click', function () {
+            alert({{ car }});
             weui.picker([
 
                 {% for c in car %}
