--- a/CarWechat/app/templates/agent/depart.html
+++ b/CarWechat/app/templates/agent/depart.html
@@ -274,7 +274,7 @@
 
                 {% for c in car %}
                     {
-                        label: {{ c.name }},
+                        label: "{{ c.name }}",
                         value: {{ c.id }}
                     },
                 {% endfor %}
