--- a/CarWechat/app/templates/agent/orderDetail.html
+++ b/CarWechat/app/templates/agent/orderDetail.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "agentbase.html" %}
 {% block css %}
     <link href="https://cdn.bootcss.com/jqueryui/1.12.1/jquery-ui.min.css" rel="stylesheet">
     <style type="text/css">
